--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@notionhq/client": "^1.0.4",
+    "dayjs": "^1.11.3",
     "next": "12.1.6",
+    "notion-to-md": "^2.4.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-markdown": "^8.0.3"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
